--- a/src/web/views/layouts/main.hbs
+++ b/src/web/views/layouts/main.hbs
@@ -64,3 +64,6 @@
     crossorigin="anonymous"></script>
 
 {{{_sections.script-after}}}
+
+{{!-- ensure the javascript is at the bottom of the code in express-handlebars template
+    http://stackoverflow.com/a/25307270, http://stackoverflow.com/a/21740214 --}}
