extract gradebook into a dedicated express app

--- a/src/gradebook/views/gradebook/gradebook-view-recent.hbs
+++ b/src/gradebook/views/gradebook/gradebook-view-recent.hbs
@@ -206,8 +206,8 @@
             </p> --}}
 <p>
     <span></span>
-    <a href="/elevi/{{student.id}}/catalog">Afiseaza catalogul complet</a>
+    <a href="/catalog/elevi/{{student.id}}">Afiseaza catalogul complet</a>
 </p>
 <p>
-    <a href="/admin/elevi/{{student.id}}/catalog">Editeaza catalogul</a>
+    <a href="/catalog/admin/elevi/{{student.id}}">Editeaza catalogul</a>
 </p>
