--- a/src/web/views/student/student.hbs
+++ b/src/web/views/student/student.hbs
@@ -69,15 +69,15 @@
 
 <ul>
     <li class="mt-1">
-        <a href="/elevi/{{student._id}}/catalog-recent">Catalog recent</a>
+        <a href="/catalog/elevi/{{student._id}}/catalog-recent">Catalog recent</a>
         <span>(doar ultimele 2 sapt.)</span>
     </li>
     <li class="mt-1">
-        <a href="/elevi/{{student._id}}/catalog">Catalog complet</a>
+        <a href="/catalog/elevi/{{student._id}}">Catalog complet</a>
         <span>(semestrul curent)</span>
     </li>
     <li class="mt-1">
-        <a href="/admin/elevi/{{student._id}}/catalog">Editeaza catalog</a>
+        <a href="/catalog/admin/elevi/{{student._id}}">Editeaza catalog</a>
     </li>
     {{!-- <li class="mt-1">
         <span class="font-weight-bold">Istoric:</span>
