--- a/src/gradebook/views/gradebook/gradebook-view.hbs
+++ b/src/gradebook/views/gradebook/gradebook-view.hbs
@@ -80,17 +80,12 @@
         font-size: 1.4em;
     }
 
-    .absence-date-span {
+    .date-span {
         display: inline-block;
-        width: 60px;
+        width: 55px;
     }
 
-    .mark-date-span {
-        display: inline-block;
-        width: 70px;
-    }
-
-    .mark-value-span {
+    .value-span {
         display: inline-block;
         width: 20px;
     }
@@ -131,45 +126,38 @@
 
 {{#each subjects}}
 
-<div id="{{id}}" class="subject-container" data-subject-id="{{id}}" data-subject-name="{{name}}">
-    <h3 class="font-weight-normal mt-5">{{name}}</h3>
+<div id="{{id}}" class="subject-container  mt-5" data-subject-id="{{id}}" data-subject-name="{{name}}">
+    <h4 class="font-weight-normal">{{name}}</h4>
 
-    {{#unless isEducationalClass}}
+    {{#if hasAbsences}}
     <div class="absences-container ml-4 mt-4">
         <div class="font-weight-bold">Absente:</div>
         <ul>
             {{#each absences}}
             <li id={{id}}>
-                <span class="absence-date-span {{#if isExcused}}text-success{{/if}}">{{friendlyDate}}</span>
-                {{#unless isExcused}}
-                <button class="excuse-absence-btn btn btn-link">Motiveza</button> |
-                {{/unless}}
-                <button class="delete-absence-btn btn btn-link">Sterge</button>
+                <span class="date-span {{#if isExcused}}text-success{{/if}}">{{friendlyDate}}</span>
+                {{#if isExcused}}
+                <span class="text-success"> (Motivat)</span>
+                {{/if}}
             </li>
             {{/each}}
         </ul>
-
-        <button class="expand-add-absence-btn btn btn-sm btn-primary ml-4 mt-1">Adauga absente</button>
     </div>
-    {{/unless}}
+    {{/if}}
 
-    {{#unless isEducationalClass}}
+    {{#if hasMarks}}
     <div class="marks-container ml-4 mt-4">
         <div class="font-weight-bold">Note:</div>
         <ul>
             {{#each marks}}
             <li id={{id}}>
-                <span class="mark-value-span">{{value}}</span>
-                <span class="mark-date-span text-muted">/ {{friendlyDate}}</span>
-                <button class="delete-mark-btn btn btn-link">Sterge</button>
+                <span class="value-span font-weight-bold">{{value}}</span>
+                / <span class="date-span text-muted">{{friendlyDate}}</span>
             </li>
             {{/each}}
         </ul>
-
-        <button class="expand-add-mark-btn btn btn-sm btn-primary ml-4 mt-1">Adauga note</button>
-
     </div>
-    {{/unless}}
+    {{/if}}
 
     {{#if hasSemestrialTestPaper}}
     <div class="semestrial-test-paper-container ml-4 mt-4">
@@ -177,37 +165,28 @@
         {{#if semestrialTestPaper.value}}
         <span id={{semestrialTestPaper.id}}
             class="semestrial-test-paper-value-span font-weight-bold text-danger">{{semestrialTestPaper.value}}</span>
-        <button class="delete-semestrial-test-paper-btn btn btn-link">Sterge</button>
-        {{else}}
-        <button class="expand-add-semestrial-test-paper-btn btn btn-link">Adauga teza</button>
         {{/if}}
     </div>
     {{/if}}
 
+    {{#if hasSemestrialAverage}}
     <div id={{id}} class="semestrial-average-container ml-4 mt-4">
         <span class="font-weight-bold">Media:</span>
         {{#if semestrialAverage.value}}
         <span id={{semestrialAverage.id}}
             class="semestrial-average-value-span font-weight-bold text-danger">{{semestrialAverage.value}}</span>
         <span class="text-danger">({{semestrialAverage.valueAsText}})</span>
-        <button class="delete-semestrial-average-btn btn btn-link">Sterge</button>
-        {{else}}
-        <button class="expand-add-semestrial-average-btn btn btn-link">Adauga media</button>
         {{/if}}
     </div>
+    {{/if}}
 
     <hr class="mt-5" />
     {{/each}}
 
     <p>
-        <a href="/elevi/{{student.id}}/catalog-recent">Catalogul recent</a> <span> (ultimele 2 sapt.)</span>
+        <span></span>
+        <a href="/catalog/elevi/{{student.id}}/catalog-recent">Afiseaza catalogul recent</a>
     </p>
     <p>
-        <a href="/elevi/{{student.id}}/catalog">Catalogul complet</a>
+        <a href="/catalog/admin/elevi/{{student.id}}">Editeaza catalogul</a>
     </p>
-
-    <script type="text/x-template" id="ui-state">{{{toJSON uiState }}}</script>
-
-    {{#section 'script'}}
-    <script type="module" src="/views/gradebook/main.js"></script>
-    {{/section}}
