--- a/src/web/views/teacher/teacher.hbs
+++ b/src/web/views/teacher/teacher.hbs
@@ -28,6 +28,6 @@
 
 <h5 class="mt-4">Zile in care preda:<span></span></h5>
 <h5 class="font-weight-light">
-    <a href="/profesori/{{teacher._id}}/orar">Orar</a>
+    <a href="/orar/profesori/{{teacher._id}}">Orar</a>
 </h5>
 {{/if}}
