--- a/src/web/views/class/class.hbs
+++ b/src/web/views/class/class.hbs
@@ -12,12 +12,12 @@
 </h4>
 
 <h5 class="mt-4 font-weight-light">
-    <a href="/clase/{{class._id}}/elevi">elevi</a>
-    {{#if (eq class.name "7B")}}
+    {{!-- <a href="/clase/{{class._id}}/elevi">elevi</a> --}}
+    {{!-- {{#if (eq class.name "7B")}}
     | <a href="/clase/{{class._id}}/parinti">parinti</a>
-    {{/if}}
+    {{/if}} --}}
     {{#if (gt class.grade "4")}}
-    |
+    {{!-- | --}}
     <a href="/clase/{{class._id}}/profesori">profesori</a> |
     <a href="/orar/clase/{{class._id}}">orar</a>
     {{/if}}
