--- a/src/web/views/home.hbs
+++ b/src/web/views/home.hbs
@@ -11,6 +11,17 @@
     <p class="lead">Timisoara</p>
 </div>
 
+<h5>Locuri libere pentru anul scolar 2019-2020</h5>
+<ul>
+    <li>Clasa pregatitoare: 8 locuri</li>
+    <li>Clasa a 2-a: 1 loc</li>
+    <li>Clasa a 3-a: 2 locuri</li>
+    <li>Clasa a 5-a: 16 locuri</li>
+    <li>Clasa a 6-a: 13 locuri</li>
+    <li>Clasa a 7-a: 11 locuri</li>
+    <li>Clasa a 8-a: 9 locuri</li>
+</ul>
+
 {{!-- <h5>Elevii inscrisi in clasa pregatitoare, anul 2018-2019</h5>
 <h5><a href="https://scoala21.blob.core.windows.net/share/elevi-inscrisi-in-clasa-pregatitoare.pdf">Detalii</a></h5>
 
