--- a/src/web/views/parent/parent.hbs
+++ b/src/web/views/parent/parent.hbs
@@ -48,7 +48,7 @@
 <h5 class="mt-4">Parinte / tutor pt. elevii:</h5>
 
 <ul>
-  {{#each parent.students }}
+  {{#each parent.parentInfo.students }}
   <li class="mt-1">
     <a href="/elevi/{{id}}">{{lastName}} {{firstName}}</a>
     {{#if kinship}}
