--- a/src/web/views/parent/parents.hbs
+++ b/src/web/views/parent/parents.hbs
@@ -31,7 +31,7 @@
                                 <div><a href="/elevi/{{id}}">{{firstName}} {{lastName}}</div>
                             {{/each}} --}}
                         <ul class="pl-3 mb-0">
-                            {{#each students }}
+                            {{#each parentInfo.students }}
                             <li>
                                 <a href="/elevi/{{id}}">{{lastName}} {{firstName}}</a>
                             </li>
