--- a/web/views/student/student.hbs
+++ b/web/views/student/student.hbs
@@ -131,7 +131,7 @@
 <h5 class="mt-4">Parinti/Tutori:</h5>
 
 <ul>
-    {{#each student.parents }}
+    {{#each student.studentInfo.parents }}
     <li class="mt-1"><a href="/parinti/{{id}}">{{lastName}} {{firstName}}</a></li>
     {{/each}}
 </ul>
