init academicYear 201920 (wip) [skip ci]

--- a/src/gradebook/views/gradebook/gradebook-view-recent.hbs
+++ b/src/gradebook/views/gradebook/gradebook-view-recent.hbs
@@ -122,9 +122,9 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Acasa</a></li>
         <li class="breadcrumb-item"><a href="/clase">Clase</a></li>
-        <li class="breadcrumb-item"><a href="/clase/{{class.id}}">{{class.name}}</a></li>
-        <li class="breadcrumb-item"><a href="/clase/{{class.id}}/elevi">Elevi</a></li>
-        <li class="breadcrumb-item"><a href="/elevi/{{student.id}}">{{student.lastName}}
+        <li class="breadcrumb-item"><a href="/clase/{{class._id}}">{{class.name}}</a></li>
+        <li class="breadcrumb-item"><a href="/clase/{{class._id}}/elevi">Elevi</a></li>
+        <li class="breadcrumb-item"><a href="/elevi/{{student._id}}">{{student.lastName}}
                 {{studentFirstNameFirstChar}}.</a></li>
         {{!-- <li class="breadcrumb-item active" aria-current="page">Catalog</li> --}}
     </ol>
@@ -135,9 +135,9 @@
 </h1>
 
 <h5 class="mt-4">
-    <a href="/elevi/{{student.id}}">{{student.lastName}} {{student.firstName}}</a>,
+    <a href="/elevi/{{student._id}}">{{student.lastName}} {{student.firstName}}</a>,
     Clasa:
-    <a href="/clase/{{class.id}}">{{class.name}}</a>
+    <a href="/clase/{{class._id}}">{{class.name}}</a>
 </h5>
 
 <p class="mb-5">Actualizari din ultimele <span class="font-weight-bold">2 saptamani</span>:
@@ -206,8 +206,8 @@
             </p> --}}
 <p>
     <span></span>
-    <a href="/catalog/elevi/{{student.id}}">Afiseaza catalogul complet</a>
+    <a href="/catalog/elevi/{{student._id}}">Afiseaza catalogul complet</a>
 </p>
 <p>
-    <a href="/catalog/admin/elevi/{{student.id}}">Editeaza catalogul</a>
+    <a href="/catalog/admin/elevi/{{student._id}}">Editeaza catalogul</a>
 </p>
