--- a/src/web/views/staff/staff.hbs
+++ b/src/web/views/staff/staff.hbs
@@ -1,14 +1,17 @@
 <h3>Directori:</h3>
 <ul>
-    <li class="mt-1"> prof. <strong>Daniela Maran</strong>, director </li>
-    <li class="mt-1"> prof. inv. primar <strong>Liliana Boitiu</strong>, director adjunct </li>
+    {{#each principals}}
+    <li class="mt-1">
+        {{shortTitle}} <strong>{{firstName}} {{lastName}}</strong>, {{principalTitle}}
+    </li>
+    {{/each}}
 </ul>
 
 <h3>Consiliul de administratie:</h3>
 <ul>
     {{#each staff}}
     <li class="mt-1">
-        {{title}} <strong>{{firstName}} {{lastName}}</strong>, {{role}}
+        {{shortTitle}} <strong>{{firstName}} {{lastName}}</strong>, {{roleInStaff}}
     </li>
     {{/each}}
 </ul>
