--- a/src/shared/views/partials/navbar.hbs
+++ b/src/shared/views/partials/navbar.hbs
@@ -32,7 +32,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                 {{/if}}
                 {{/if}}
 
-                <li class="nav-item dropdown">
+                {{!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Inscriere
@@ -55,7 +55,9 @@ if 2 similar sections are used, the last one will override the first one --}}
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/acte-necesare-pentru-inscriere' )}} active {{/if}}"
                             href="/acte-necesare-pentru-inscriere">Acte
                             necesare pentru inscriere</a>
-                        {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/procedura-de-repartizare-pe-clase' )}} active {{/if}}"
+
+                        comment lines below    
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/procedura-de-repartizare-pe-clase' )}} active {{/if}}"
                             href="/procedura-de-repartizare-pe-clase">Procedura
                             de repartizare pe clase</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/scoala-dupa-scoala' )}} active {{/if}}"
@@ -63,12 +65,12 @@ if 2 similar sections are used, the last one will override the first one --}}
                             dupa scoala</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/imagini-din-clase' )}} active {{/if}}"
                             href="/imagini-din-clase">Imagini
-                            din clase</a> --}}
+                            din clase</a>
 
 
 
                     </div>
-                </li>
+                </li> --}}
 
                 {{!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
