--- a/src/web/views/teacher/teacher.hbs
+++ b/src/web/views/teacher/teacher.hbs
@@ -11,7 +11,7 @@
 <h3 class="font-weight-light">Profesor {{teacher.degree}}{{#if teacher.holder}}, titular{{/if}}</h3>
 <h4 class="font-weight-light">{{teacher.subject}}</h4>
 
-{{#if (eq teacher.area "Invatamant primar")}}
+{{!-- {{#if (eq teacher.area "Invatamant primar")}}
 <h5 class="mt-4">Clasa la care preda:
     {{#if teacherClass}}
     <a href="/clase/{{teacherClass.id}}">{{teacherClass.name}}</a>
@@ -30,4 +30,4 @@
 <h5 class="font-weight-light">
     <a href="/orar/profesori/{{teacher._id}}">Orar</a>
 </h5>
-{{/if}}
+{{/if}} --}}
