add docs for depunere contestatii

--- a/src/web/views/diverse.hbs
+++ b/src/web/views/diverse.hbs
@@ -11,3 +11,9 @@
 
 <h5 class="mt-3 mb-0">Transparenta veniturilor salariale conform Legii 153/2017, art.33</h5>
 <a href="https://scoala21.blob.core.windows.net/share/venituri-salariale-nov-2017.xlsx">Detalii</a>
+
+<h5 class="mt-3 mb-0">Anunt depunere contestatii EN 2020</h5>
+<a href="https://scoala21.blob.core.windows.net/share/anunt-depunere-contestatii-EN-2020.pdf">Detalii</a>
+
+<h5 class="mt-3 mb-0">Formular tipizat depunere contestatie EN 2020</h5>
+<a href="https://scoala21.blob.core.windows.net/share/formular-tipizat-depunere-contestatie-EN-2020.pdf">Detalii</a>
