add ingo buget 2020

--- a/src/web/views/diverse.hbs
+++ b/src/web/views/diverse.hbs
@@ -7,7 +7,8 @@
 <a href="https://scoala21.blob.core.windows.net/share/organigrama.pdf">Detalii</a>
 
 <h5 class="mt-3 mb-0">Buget</h5>
-<a href="https://scoala21.blob.core.windows.net/share/buget.pdf">Detalii</a>
+<a href="https://scoala21.blob.core.windows.net/share/buget.pdf">Detalii buget 2019</a>
+<a href="https://scoala21.blob.core.windows.net/share/buget-2020.pdf">Detalii buget 2020</a>
 
 <h5 class="mt-3 mb-0">Transparenta veniturilor salariale conform Legii 153/2017, art.33</h5>
 <a href="https://scoala21.blob.core.windows.net/share/venituri-salariale-nov-2017.xlsx">Detalii</a>
