--- a/web/views/diverse.hbs
+++ b/web/views/diverse.hbs
@@ -7,8 +7,12 @@
 <a href="https://scoala21.blob.core.windows.net/share/organigrama.pdf">Detalii</a>
 
 <h5 class="mt-3 mb-0">Buget</h5>
-<a href="https://scoala21.blob.core.windows.net/share/buget.pdf">Detalii buget 2019</a>
-<a href="https://scoala21.blob.core.windows.net/share/buget-2020.pdf">Detalii buget 2020</a>
+<a href="https://scoala21.blob.core.windows.net/share/buget.pdf">Buget 2019</a></br>
+<a href="https://scoala21.blob.core.windows.net/share/buget-2020.pdf">Buget 2020</a></br>
+<a href="https://scoala21.blob.core.windows.net/share/bilant-si-cont-de-rezultat-patrimonial-2020-buget-stat.pdf">
+    Bilanț si cont de rezultat patrimonial 2020 BS</a></br>
+<a href="https://scoala21.blob.core.windows.net/share/bilant-si-cont-de-rezultat-patrimonial-2020-buget-local.pdf">
+    Bilanț si cont de rezultat patrimonial 2020 BL</a></br>
 
 <h5 class="mt-3 mb-0">Transparenta veniturilor salariale conform Legii 153/2017, art.33</h5>
 <a href="https://scoala21.blob.core.windows.net/share/venituri-salariale-nov-2017.xlsx">Detalii</a>
