--- a/src/web/views/diverse.hbs
+++ b/src/web/views/diverse.hbs
@@ -1,11 +1,5 @@
-<h5 class="mt-3 mb-0">Situația vaccinării în 01.11.2021</h5>
-<p>
-    <ul>
-        <li>numărul total de cadre didactice angajate: 48;</li>
-        <li>număr total de cadre didactice vaccinate: 34.</li>
-    </ul>
-    <div class="ml-4">Procent cadre didactice vaccinate: 70,83%.</div>
-</p>
+<h5 class="mt-3 mb-0">Anunț concurs îngrijitor (01.2023)</h5>
+<a href="https://scoala21.blob.core.windows.net/share/2023-01-anunt-concurs-ingrijitor.pdf">Detalii</a>
 
 <h5 class="mt-3 mb-0">Declarații de avere</h5>
 <a href="https://scoala21.blob.core.windows.net/share/da-maran.pdf">Detalii</a>, <a
